--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <h1>header</h1>
-    <h1></h1>
+    <h1 class="header">Header</h1>
+    <h1 class="sidebar">Sidebar</h1>
+    <h1 class="main">Main</h1>
+    <h1 class="footer">Footer</h1>
 </body>
 </html>
